	* added display.needs_repaint-clearing code to InitScreen
	* PrintStatusLine always does Infocom-style statuslines (a space to the left and right) to force compatibility with DOS terps
	* Tweaked some MovePlayer stuff
	* MovePlayer no longer calls PrintStatusLine since I figure it'll be called by main at the end of the turn. Might changes this back if it causes a lot of problems.
v 3.2 - * added a missing printed bracket in parser monitoring code
	* added NEW_EMPTY system for more container/platform-emptying options
	* added AMERICAN_ENGLISH flag to switch between quotation punctuation styles
	* added NEW_DESCRIBEPLACE to give more DescribePlace options
	* added WhatsIn replacement and ListObjects RLibMessage-call for more printing options
	* updated CenterTitle to not draw extra window in simple, non-Glk terps
	* Fixed some places in the supercontainer class that didn't work right with transparent supercontainers.
	* Fixed a problem where non-door items with door_to properties weren't being accepted by DoGo. Probably still some perfecting to do on this one.
	* Attachables DescribePlace code was missing some parentheses.
	* Added default message for taking objects from friendly (non-unfriendly) characters
	* Non-quiet scenery platforms now should now default to listing contents in room descriptions. 
v 3.1 - * Added Supercontainer object class code. #set USE_SUPERCONTAINER to include.
	* Added NEW_FUSE code
	* fixed ClearArray memory-hogging bug
	* tweaked PrintStatusLine code to not loop when there is only one printstatuslib child
	* SetUpDirectionObjects isn't run so often
v 3.0 - * Changed some DoGo code and grammar to allow "go out/off of <object>"
	* Added "config_sys.h", a configuration file manager (helps games write data to one file instead of several). Sort of experimental but hopefully it's ready for release. Colorlib has been updated to use it, even if it's currently a bit ugly.
v 2.9 - * Added Object Sorting section to complement ListChildren routine